--- a/flexbox/flex-box_03.html
+++ b/flexbox/flex-box_03.html
@@ -16,8 +16,8 @@
             flex-flow: column;
 
             /*
-            flex-children이 parent에 가득찼을때 자동으로 줄바꿈을 할것인가(wrap)
-            하지 말것인가(no-wrap : 기본값)
+            flex-children이 parent에 가득찼을때 자동으로 줄바꿈을 할것인가(wrap) 하지 말것인가(no-wrap : 기본값)
+            no-wrap으로 설정하면 children을 무조건 parent에 가득채우고 width와 height를 조절한다.
             */
             flex-wrap: wrap;
             border: 1px solid blue;
