--- a/bbs_2020/bbs_write.html
+++ b/bbs_2020/bbs_write.html
@@ -58,6 +58,10 @@
         background-color: darkolivegreen;
       }
 
+      button#btn-jq {
+        background-color: brown;
+      }
+
       button#btn-reset {
         background-color: purple;
       }
@@ -170,6 +174,7 @@
                 $("#b_writer").val(data.b_writer);
                 $("#b_subject").val(data.b_subject);
                 $("#b_content").val(data.b_content);
+                $("#b_file").val(data.b_file);
               }
             })
             .catch((err) => {
@@ -188,16 +193,36 @@
 
           // form에 담긴 데이터를 axios(ajax 방식)으로 서버로 전송하기
           // 1. JS의 formData 클래스를 객체로 생성
-          //   let formData = new FormData();
+          let formData = new FormData();
+
+          // input form type ="file"설정된 tag에서 tag를 select 했는데
+          // 지금 현재 form에는 id ="file" 된 tag가 1개 뿐이지만
+          // type="file"로 설정된 tag는 기본값이 배열이다.
+
+          // form에서 file을 upload하는 시스템은
+          // 기본적으로 multi file을 upload할 수 있도록 구성이 되어 있다.
+          // 이런 상황에서 파일을 1개만 선택해서 업로드 할 경우는
+          // 파일정보의 0번째 위치의 files 속성에서 또 0번째를 선택하여
+          // FormData 객체에 append를 하고 server로 전송해야 한다.
+
+          //2. 생성한 formData 객체에 file 정보를 추가하기
+          let file = $("#file");
+          formData.append("file", file[0].files[0]);
+
           // form에 입력된 input box의 모든 값을 문자열화하여 FormData 객체로 만들어서 formData 변수에 담아라
-          let formData = $("form#bbs-form").serialize();
+          // let formData = $("form#bbs-form").serialize();
           //   alert(JSON.stringify(formData));
           //   alert(formData);
 
+          // 파일을 axios로 전송할 경우
+          // headers 속성을 추가하고, headers 속성 중 Content-Type 을 multipart/form-data로 추가해주어야 한다.
           axios({
             url: "http://localhost:8080/bbs/api/bbs",
             method: send_method,
             data: formData,
+            headers: {
+              "Content-Type": "multipart/form-data",
+            },
           })
             .then((res) => {
               alert("Data 전송 성공");
@@ -210,6 +235,58 @@
         // reset 버튼 hidden data clear 버그 수정
         $(document).on("click", "#btn-reset", () => {
           $("#b_seq").val(0);
+        });
+
+        const fileSend = (ev) => {
+          let formData = new FormData();
+          let files = ev.originalEvent.dataTransfer.files;
+          formData.append("file", files[0]);
+
+          $.ajax({
+            url: "http://localhost:8080/bbs/api/file",
+            method: "POST",
+            data: formData,
+            processData: false,
+            contentType: false,
+            success: (result) => {
+              // alert("파일 업로드 성공 :D\n" + result);
+              $("#image-drop h3").text("파일을 Drag&Drop 하세요");
+              let img = $("<img/>", {
+                src: "http://localhost:8080/bbs/upload/" + result,
+                height: "100px",
+              });
+              $("#image-view").html(img);
+            },
+            error: (err) => {
+              alert("서버통신 ERROR :(");
+            },
+          });
+        };
+
+        // jquery의 $.ajax()를 사용하여 파일 upload
+        $(document).on("click", "#btn-jq", (e) => {
+          fileSend(e);
+        }); // btn-jq click end
+        // 파일을 끌어서 상자위로 이동했을때
+        $(document).on("dragover", "#image-drop", (e) => {
+          $("#image-drop h3").text("파일을 Drop 하세요");
+          // event 버블링이 일어나서 drop event가 작동이 안되는 현상을
+          // 방지하기 위한 코드
+          // e.stopPropagation();
+          // e.preventDefault();
+          // 또는
+          return false;
+        });
+        // 상자에서 벗어났을 때
+        $(document).on("dragleave", "#image-drop", (e) => {
+          $("#image-drop h3").text("파일을 Drag&Drop 하세요 :D");
+        });
+
+        // 파일을 상자에 내려놓았을 때
+        $(document).on("drop", "#image-drop", (e) => {
+          e.preventDefault();
+          $("#image-drop h3").text("파일 등록 중...");
+          fileSend(e);
         });
       });
     </script>
@@ -229,7 +306,7 @@
       </table>
     </section>
 
-    <form id="bbs-form">
+    <form id="bbs-form" enctype="multipart/form-data">
       <div>
         <label for="b_date">작성일자</label
         ><input name="b_date" id="b_date" type="text" />
@@ -250,6 +327,37 @@
         <label for="b_content">내용</label
         ><input name="b_content" id="b_content" type="text" />
       </div>
+      <div>
+        <label for="b_file">이미지</label
+        ><input name="b_file" id="b_file" type="text" />
+      </div>
+
+      <style>
+        div#image-drop {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          background-color: #aaa;
+          border: 1px solid green !important;
+          height: 200px;
+          text-align: center;
+        }
+        div#image-view {
+          display: flex;
+          background-color: white;
+          border: 1px solid #ddd !important;
+          height: 100px;
+          justify-content: center;
+        }
+      </style>
+      <script>
+        $(function () {});
+      </script>
+      <div id="image-drop">
+        <h3>파일을 Drag&Drop 하세요 :D</h3>
+      </div>
+
+      <div id="image-view"></div>
 
       <div id="btn-box">
         <input
@@ -259,7 +367,8 @@
           value="0"
           style="display: block; width: 70%; margin: 10px auto"
         />
-        <button type="button" id="btn-send">전송</button>
+        <button type="button" id="btn-send">axios 전송</button>
+        <button type="button" id="btn-jq">jQuery 전송</button>
         <button type="reset" id="btn-reset">새로작성</button>
       </div>
     </form>
